# tinyzip

./: Cargo.toml  README.md  clippy.toml
.github/workflows/: ci.yml
src/: lib.rs  std_io.rs
tests/: corpus.rs
