[package]
name = "tinyzip"
version = "0.2.0"
edition = "2024"
description = "Tiny no_std no_alloc low-level ZIP navigation"
license = "MIT"
repository = "https://github.com/lovasoa/tinyzip"

[features]
default = []
std = []

[lib]
path = "src/lib.rs"

[dependencies]

[dev-dependencies]
miniz_oxide = "0.8"
flate2 = "1"
