[package]
name = "tinyzip"
version = "0.2.0"
edition = "2024"
description = "Tiny no_std no_alloc low-level ZIP navigation"
license = "MIT"
repository = "https://github.com/lovasoa/tinyzip"

[features]
default = []
std = ["flate2?/default"]

[lib]
path = "src/lib.rs"

[dependencies]
miniz_oxide = { version = "0.8", optional = true, default-features = false }
flate2 = { version = "1", optional = true }

[dev-dependencies]
miniz_oxide = { version = "0.8", default-features = false }
flate2 = "1"
